# onomondo-uicc-XinYi

./: CMakeLists.txt
src/softsim/: CMakeLists.txt
src/softsim/crypto/: CMakeLists.txt  aes-encblock.c  common.h  crypto.h
src/softsim/milenage/: CMakeLists.txt
src/softsim/uicc/: CMakeLists.txt
utils/: CMakeLists.txt
